--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               A new addictive read in store with
               <span class="text--blue">Readiction</span>
             </h2>
-            <a href="#recent">
+            <a href="./books.html">
               <button class="book__button">browse Books</button>
             </a>
           </div>
@@ -328,7 +328,7 @@
             <h2 class="section__title">
               Explore more <span class="text--blue">Books</span>
             </h2>
-            <a href="#Features">
+            <a href="./books.html">
               <button class="book__button">Browse Books</button>
             </a>
           </div>
